--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
