Actualizacion de imagenes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "https://firebasestorage.googleapis.com/v0/b/images-6d562.appspot.com/o/images_mantenimiento%2FLOGO.jpeg?alt=media&token=fec171ef-139d-4431-9669-0edf07ffa17a",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "https://firebasestorage.googleapis.com/v0/b/images-6d562.appspot.com/o/images_mantenimiento%2FLOGO.jpeg?alt=media&token=fec171ef-139d-4431-9669-0edf07ffa17a",
       "type": "image/png",
       "sizes": "512x512"
     }
